Derive our primary interface and address by trying to connect to an address in the TEST-NET-2 network as noted in RFC5737 instead of using the 1.1.1.1 address. Also, use port 7 (echo) for better style. Fixes PR bin/46758 thanks to Lloyd Parkes.

While here, if we do fail to connect to the test address, don't spam
this to the console as it's a common case during the boot sequence.